--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
+  font-family: "Anton", sans-serif;
+}
+.header {
+  font-size: 2rem;
+  letter-spacing: 0.5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* 
+Stats Cards 
+*/
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5rem;
+}
+.cards > * {
+  background: #f2f2f2;
+  font-size: 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+}
+.confirmed {
+  color: orange;
+}
+.recovered {
+  color: green;
+}
+.deaths {
+  color: red;
 }
