--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,13 @@ Stats Cards
   color: rgb(143, 218, 235);
   font-family: sans-serif;
 }
+
+/* 
+Selector 
+*/
+#select-country {
+  width: 15rem;
+  height: 2rem;
+  margin-top: 3rem;
+  border: 1px solid rgb(143, 218, 235);
+}
